<resources>
    <string name="app_name">Exam</string>

    <!-- Register Activity. -->
    <string name="hint_first_name">Prénom</string>
    <string name="hint_last_name">Nom</string>
    <string name="hint_birth_date">Date de naissance</string>
    <string name="birthdate_calendar_image_description">Clique ici pour choisir ta date de naissance</string>
    <string name="gender_hint">Sexe</string>
    <string name="male_gender">Homme</string>
    <string name="female_gender">Femme</string>
    <string name="hint_email">Adresse e-mail</string>
    <string name="hint_password">Mot de passe</string>
    <string name="register_button">S\'inscrire</string>
    <string name="login_link">Déjà un compte ? Clique ici !</string>

    <!-- Login Activity. -->
    <string name="login_button">Se connecter</string>
    <string name="register_link">Pas de compte ? Clique ici !</string>

    <!-- Game Activity. -->
    <string name="score_template">Score:</string>
    <string name="level_template">Niveau:</string>
    <string name="life_sprite_description">Un coeur représentant la vie du joueur</string>
    <string name="play_button_description">Bouton \"Jouer\"</string>

    <!-- Level selection Activity. -->
    <string name="easy_gamemode_title">Facile</string>
    <string name="hard_gamemode_title">Difficile</string>
    <string name="expert_gamemode_title">Expert</string>
    <string name="timed_gamemode_title">Chrono</string>
    <string name="level_selection_text">Modes de jeu</string>
    <string name="load_saved_title">Reprendre</string>
    <string name="high_score_template">Meilleur score: </string>
    <string name="Rank_template">Classement: </string>
</resources>